# lspintar

./: .gitignore  BUGS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  NOTES.md  README.md  TODO.md  TODOs.md  \
.cargo/: config.toml
.claude/: settings.local.json
groovy/: Cargo.toml
groovy/src/: constants.rs  groovy_support.rs  lib.rs
groovy/src/support/: mod.rs  queries.rs
java/: Cargo.toml
java/src/: constants.rs  lib.rs
java/src/support/: mod.rs  queries.rs
java/src/support/tests/: collect_diagnostics.rs  extract_call_arguments.rs  find_declarations_in_scope.rs  find_ident_at_position.rs  find_variable_type.rs  get_imports.rs  get_indexer_data.rs  get_literal_type.rs  get_method_receiver_and_params.rs  get_type_at_position.rs
kotlin/: Cargo.toml
kotlin/src/: constants.rs  lib.rs
kotlin/src/support/: mod.rs  queries.rs
lsp_core/: Cargo.toml
lsp_core/src/: language_support.rs  languages.rs  lib.rs  local_refs.rs  lsp_logging.rs  node_kind.rs  node_types.rs  ts_helper.rs  util.rs
lsp_core/src/build_tools/: gradle.rs  mod.rs  no_build_tool.rs
lsp_core/src/vcs/: git.rs  handler.rs  mod.rs  no_vcs.rs
migrations/: 01__create_symbol_table.sql  02__create_symbol_implements_table.sql  02__create_symbol_super_mapping_table.sql  03__create_external_symbol_table.sql  04__add_jar_path_index.sql  05__add_prefix_search_indexes.sql  06__external_symbol_overloads.sql
server/: Cargo.toml
server/src/: as_lsp_location.rs  constants.rs  enums.rs  generic_resolution.rs  indexer.rs  lib.rs  lsp_convert.rs  main.rs  rename.rs  repo.rs  server.rs
server/src/models/: external_symbol.rs  mod.rs  symbol.rs  symbol_interface_mapping.rs  symbol_super_mapping.rs  util.rs
server/tests/: completion.rs  diagnostics.rs  did_save.rs  go_to_definition_tests.rs  goto_definition.rs  goto_definition_tests.rs  goto_implementation.rs  goto_implementation_tests.rs  hover.rs  indexer.rs  indexer_tests.rs  references.rs  rename.rs  util.rs  vcs_incremental.rs
server/tests/fixtures/groovy-gradle-multi/: build.gradle  settings.gradle
server/tests/fixtures/groovy-gradle-multi/api/src/main/groovy/com/example/api/: UserController.groovy
server/tests/fixtures/groovy-gradle-multi/app/: build.gradle
server/tests/fixtures/groovy-gradle-multi/app/src/main/groovy/com/example/app/: Application.groovy
server/tests/fixtures/groovy-gradle-multi/core/src/main/groovy/com/example/core/: BaseService.groovy  DataProcessResult.groovy  DataProcessor.groovy
server/tests/fixtures/groovy-gradle-single/: build.gradle  settings.gradle
server/tests/fixtures/groovy-gradle-single/src/main/groovy/com/example/: BaseService.groovy  Repository.groovy  User.groovy  UserService.groovy
server/tests/fixtures/polyglot-spring/: build.gradle  lsp-gradle-init.gradle
server/tests/fixtures/polyglot-spring/src/main/groovy/com/example/demo/: CompletionTest.groovy  Controller.groovy  GroovyService.groovy
server/tests/fixtures/polyglot-spring/src/main/java/com/example/demo/: BaseRepository.java  JavaService.java  Notifier.java
server/tests/fixtures/polyglot-spring/src/main/kotlin/com/example/demo/: ControllerHelper.kt  KotlinService.kt  User.kt  UserRepository.kt
src/: constants.rs  main.rs  server.rs  types.rs
src/core/: build_tools.rs  constants.rs  decompiler.rs  dependency_cache.rs  diagnostic_manager.rs  document_manager.rs  jar_utils.rs  logging_service.rs  mod.rs  persistence.rs  progress.rs  queries.rs  registry.rs  state_manager.rs  symbols.rs  types.rs  utils.rs
src/core/cross_language/: imports.rs  mod.rs  resolver.rs  type_bridge.rs
src/core/definition/: external.rs  local.rs  mod.rs  project.rs  queries.rs  resolution.rs  scope.rs  workspace.rs
src/core/dependency_cache/: builtin.rs  external.rs  mod.rs  project_deps.rs  source_file_info.rs  symbol_index.rs
src/languages/: mod.rs  traits.rs
src/languages/common/: definition_chain.rs  hover.rs  method_resolution.rs  mod.rs
src/languages/groovy/: constants.rs  definition.rs  diagnostics.rs  implementation.rs  mod.rs  support.rs  symbols.rs  type_inference.rs  types.rs  utils.rs
src/languages/java/: constants.rs  diagnostics.rs  hover.rs  implementation.rs  mod.rs  support.rs  symbols.rs  utils.rs
src/languages/kotlin/: mod.rs  (+6 more)
(+62 files in other folders)
